Switch Linux futex emulation to native ucas_int(), remove unecessary futex-specific assembler routines.

Fixes PR/40490.  Reviewed by <ad>.